# skull-atlas

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
VolRoverScripts/: README.md  filter.sh  raw2obj.py
cgal_dummy/: CMakeLists.txt  array_convex_hull_2.cpp  exact.cpp  points_and_segments.cpp
cgal_mesh_generation/: CMakeLists.txt  README.md  cgal_segment.cpp  color_curvature.cpp  cubic_interpolation.h  decimate.cpp  dijkstra.hxx  distMeshMesh.cpp  image_level_surface_function.h  image_level_surface_to_mesh_converter.h  main.cpp  minecraft_surf.cpp  point_selector.cpp  point_selector_raw.cpp  remove_nonbody.cpp  select_components.cpp  surface_medax.cpp  surface_mesh_criteria.h  triangular_mesh.cpp
cgal_mesh_generation/cmake/: FindCGAL.cmake  FindEigen3.cmake  Findlibigl.cmake
cgal_mesh_generation/medial_axis_transformation/: CMakeLists.txt  README.md  main.cpp  polyhedron_builder.h  triangulation_edge_comparator.h  voronoi_medial_axis.h  voronoi_medial_axis_helper.h
cgal_mesh_generation/volume_diff/: CMakeLists.txt  GrayScaleImage3.h  VoxelwiseComparator.h  main.cpp
cmake_modules/: FindCGAL.cmake
converters/dicom2rawiv/: trials.m
data_processing/: CMakeLists.txt  README.md  build_data_tree.sh  volrov-dnsamp-mesh.sh
data_processing/file_convert/: CMakeLists.txt  convert_all.py  dicomutil.py
data_processing/file_convert/dicom2rawiv/: cliconv.m  dicom_info.m  writeRawIV.m
data_processing/file_convert/python/: convert_all.py  dicomutil.py  rawivutil.py  runtest.py  slices2rawiv.py  writeRawIV.py
data_processing/file_convert/thumbnail_gen/: wavelet_thumb.m
data_processing/waveletEncoder/: CMakeLists.txt  Makefile  README  block.cpp  block.h  data.h  encode.cpp  encode.h  error.cpp  error.h  main.cpp  mainassist.cpp  mainassist.h  pdb  pdb.h  scale.cpp  scale.h  wave.cpp  wave.h  waveAnthony.cpp  waveAnthony.h  wavedata.cpp  wavedata.h  zerobit.cpp  zerobit.h  zeroblocktable.cpp  zeroblocktable.h  zeroblocktableassist.cpp  zeroblocktableassist.h
data_processing/zipextract/: CMakeLists.txt  build_data_tree.sh  find_invalid_dicom.py  find_nonorthogonal_dicom.py  unzip_and_process  unzip_and_process.sh
data_processing/zipextract/gdcm-2.6.3/: Copyright.txt
data_processing/zipextract/gdcm-2.6.3/Utilities/doxygen/: CMakeLists.txt
dbgen/: README.md  asd.sqlite  fill_db_from_json.py  query_db.py
dicom2rawiv/: CMakeLists.txt  README.md
dicom2rawiv/file_convert/: CMakeLists.txt  convert_all.py  dicom_to_rawiv.py  dicomutil.py  inrutil.py  niftiutil.py  rawivutil.py  runtest.py  slices2rawiv.py  volimg_convert.py
dicom2rawiv/imgutil/: CMakeLists.txt  inrutil.py  inrutils.py  niftiutil.py  rawivutil.cpp  rawivutil.h  rawivutil.py  volimg_convert.py
dicom2rawiv/rawivutil/: rawivutil.cpp  rawivutil.h  test.cpp
dicom2rawiv/skull-rastering/: CMakeLists.txt  growskull.cpp  rawivutil.cpp
dicom2rawiv/zipextract/: CMakeLists.txt  build_data_tree.sh  unzip_and_process.sh
dicom2rawiv/zipextract/gdcm-2.6.3/: CMakeLists.txt
dicom2rawiv/zipextract/gdcm-2.6.3/Utilities/gdcmexpat/lib/: Makefile  cmake_install.cmake
dummy_codes/: readRawIV.m  skulldata.m
extdeps/: CMakeLists.txt  README.md
file_convert/dicom2rawiv/: dicom_rawiv.m
globalpipeline/: CMakeLists.txt  drive_global_pipeline.sh  outputName.py  pipeline_initialMesh  pipeline_precurate  pipeline_thresholdGrow
images/: README.md
libicp/src/: demo.cpp  io_OFF.h
matlab_code/: dicom_try.m
old-junk/dbgen/: decimate.mlx  query_db.py
old-junk/libicp/: CMakeLists.txt  libicp_mod.tgz
old-junk/simple-obj-loader/: README.md  obj.js
scripts/: check_anon.py  drive_global.sh  niftireg.r
scripts/RasterSkulls/: README.md  rasterskull.py  rawivutil.py
scripts/SQL/: genDB.sql
scripts/VolRover/: ax_to_off.py  combineOff.pl  config.sh  ma2off.sh  mesh.sh  obj2off.sh  off2obj.sh  raw2obj.py  rawiv2inr.sh  segment.sh  volrov-dnsamp-mesh.sh
simple-obj-loader/: index.html
web-viewer/: data_to_db.py  db.sqlite3  manage.py
web-viewer/skullviewer/: settings.py  urls.py  wsgi.py
web-viewer/viewer/: models.py  tests.py  urls.py  utils.py  views.py
web-viewer/viewer/old/: index.html
web-viewer/viewer/old/css/: style.css
web-viewer/viewer/old/old/: atom.js  f2web.js  main.js
web-viewer/viewer/old/src/: webmol.app.js  webmol.collection.atom.js  webmol.collection.mesh.js  webmol.js  webmol.model.atom.js  webmol.parser.raw.js  webmol.view.browser.js  webmol.view.finder.js  webmol.viewer.js
web-viewer/viewer/static/: README.md
web-viewer/viewer/static/css/: control.css  detail.css  loader.css  simple-sidebar.css  style.css  style1.css  wall.css
web-viewer/viewer/static/old/: viewer.js
web-viewer/viewer/static/src/: OBJLoader.js  main.js  skulldetail.js  skullviewer.app.js  skullviewer.js  skullviewer.manager.js  skullviewer.view.browser.js  skullviewer.view.finder.js  skullviewer.view.viewer.js  skullviewer.view.viewer.scene.js  skullviewer.viewer.js  skullwall.js  webmol.model.mesh.js  webmol.parser.obj.js  webmol.parser.out.js  webmol.parser.pdb.js  webmol.view.viewer.js
web-viewer/viewer/templates/: index.html
web-viewer/viewer/templates/viewer/: deform.html  detail.html  index.html  index_new.html  wall.html
